--- a/multistrap-configs/buster.conf
+++ b/multistrap-configs/buster.conf
@@ -5,8 +5,9 @@ ignorenativearch=true
 noauth=true
 unpack=true
 setupscript=/usr/share/multistrap/chroot.sh
+aptdefaultrelease=buster
 #aptsources=debian updates security backports
-bootstrap=machinekit-build-deps machinekit debian updates
+bootstrap=machinekit-build-deps machinekit debian updates sid
 
 [machinekit-build-deps]
 packages=machinekit-build-deps
@@ -31,6 +32,11 @@ suite=buster
 [updates]
 source=http://ftp.debian.org/debian
 suite=buster-updates
+
+[sid]
+source=http://ftp.debian.org/debian
+packages=libck-dev
+suite=sid
 
 [security]
 source=http://security.debian.org
